fix: added stats on node page
