# src/indexer-sdk/model/index.ts
@@ -35,6 +35,7 @@ export * from './appControllerGetOrganizationsOrder';
 export * from './appControllerGetOrganizationsParams';
 export * from './appControllerGetValidatorNodesOrder';
 export * from './appControllerGetValidatorNodesParams';
+export * from './appControllerGetValidatorStatsParams';
 export * from './appControllerGetVirtualBlockchainsOrder';
 export * from './appControllerGetVirtualBlockchainsParams';
 export * from './appControllerGetVirtualBlockchainsSort';
@@ -71,6 +72,8 @@ export * from './stakingLockDto';
 export * from './validatorNodeDto';
 export * from './validatorNodeDtoStatus';
 export * from './validatorNodeListResponseDto';
+export * from './validatorStatsCountDto';
+export * from './validatorStatsResponseDto';
 export * from './vestingLockDto';
 export * from './virtualBlockchainDto';
 export * from './virtualBlockchainListResponseDto';
